# recommendation-system

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/: articles.py  auth.py  recommend.py  users.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  interaction.py  user.py
app/middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
app/schemas/: auth.py  common.py  recommend.py  user.py
app/services/: cache.py  embedding.py  groq.py  recommendation.py
scripts/: ingest.py
